<resources>
    <string name="app_name">ArithmeticOperations</string>
    <string name="add" translatable="false">+</string>
    <string name="sub" translatable="false">-</string>
    <string name="div" translatable="false">÷</string>
    <string name="mul" translatable="false">×</string>
    <string name="undefined" translatable="false">\?</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="pass">Pass</string>
    <string name="time">Time</string>
    <string name="life">Life</string>
    <string name="key">Key</string>
    <string name="practice">Practice</string>
    <string name="description">Description</string>
    <string name="setting">Settings</string>
    <string name="score" translatable="false">\??/??</string>
    <string name="giveUpGame">Do you want to give up the game?</string>
    <string name="win">Win</string>
    <string name="winMsg">You win!</string>
    <string name="item">Item</string>
    <string name="clickBox">Open your present box.</string>
    <string name="gift">Gift</string>
    <string name="empty">Empty box</string>
    <string name="emptyMsg">There is nothing in the box…</string>
    <string name="giftMsgKey">You get some keys.</string>
    <string name="wrong">wrong answer!</string>
    <string name="lose">Lose</string>
    <string name="loseMsg">You can clear next time…</string>
    <string name="passUnable">You don\'t have enough key to pass</string>
    <string name="title_activity_settings">Settings</string>
    <string name="goalScore">Goal score</string>
    <string name="max">Max number</string>
    <string name="practiceModeSettingMsg">Use own settings</string>
    <string name="practiceModeSettingOnMsg">Practice mode use your settings.</string>
    <string name="practiceModeSettingOffMsg">Practice mode use standard settings.</string>
    <string name="sendBugReport">Send bug report</string>
    <string name="github">Github</string>
    <string name="feedback">Feedback</string>
    <string name="practiceMode">Practice mode</string>
    <string name="send">send</string>
    <string name="defaultValue">Revert to default</string>
    <string name="defaultValueMsg">Replace all values with standard practice mode defaults.</string>
    <string name="goal">Goal</string>
    <string name="answerButton">Answer box</string>
    <string name="numberButton">Number buttons</string>
    <string name="check">Check answer</string>
    <string name="operatorButton">Operator buttons</string>
    <string name="descriptionTime">Show second and millisecond value at the top left part. You will lose your life(heart), when time is up.</string>
    <string name="descriptionGoal">It tells you how many problems left to win the game. Based on /, the left side shows the number of problems resolved and the right side shows the total number of problems.</string>
    <string name="descriptionLife">If you lose all your lives, you will lose the game.</string>
    <string name="descriptionKey">Don\'t worry. You can use this item to pass problem.</string>
    <string name="descriptionAnswerButton">Drag a number or operator below and drop it here to complete your answer. You can drop numbers in place of numbers and operators in place of operators. The same kind can be swapped with each other in the answer box.</string>
    <string name="descriptionNumberButton">For each problem, you\'ll see a numbered button that\'s tailored to your problem. Just drag the appropriate number and drop it to the answer box</string>
    <string name="descriptionOperatorButton">The four operators used in the arithmetic operation are always displayed. Simply drag the appropriate operator and drop it in the answer box.</string>
    <string name="descriptionPause">During the game, the Exit Game dialog is displayed, but the time keeps running for fair play. In practice mode, however, it does not have to be, so the time is stopped.</string>
    <string name="descriptionPass">You can use the key item to pass the problem. If there is no key item, you can\'t pass.</string>
    <string name="descriptionCheck">Don\' be worry to check your answer. You can always see whether you are right or not.</string>
    <string name="descriptionGift">It you win the game, you have a chance to get items.</string>
</resources>
