<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/practice">
    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="practiceMode"
        app:summaryOff="@string/practiceModeSettingOffMsg"
        app:summaryOn="@string/practiceModeSettingOnMsg"
        app:title="@string/practiceModeSettingMsg" />
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/practiceMode">
        <SeekBarPreference
            android:max="120"
            app:defaultValue="@integer/time"
            app:dependency="practiceMode"
            app:icon="@drawable/ic_timer_black_24dp"
            app:key="practiceTime"
            app:min="5"
            app:showSeekBarValue="true"
            app:title="@string/time" />
        <SeekBarPreference
            android:max="100"
            app:defaultValue="@integer/goal"
            app:dependency="practiceMode"
            app:icon="@drawable/ic_goal_black_24dp"
            app:key="practiceGoal"
            app:min="1"
            app:showSeekBarValue="true"
            app:title="@string/goalScore" />
        <SeekBarPreference
            android:max="10"
            app:defaultValue="@integer/life"
            app:dependency="practiceMode"
            app:icon="@drawable/ic_heart_black_24dp"
            app:key="practiceLife"
            app:min="1"
            app:showSeekBarValue="true"
            app:title="@string/life" />
        <SeekBarPreference
            android:max="10"
            app:defaultValue="@integer/key"
            app:dependency="practiceMode"
            app:icon="@drawable/ic_vpn_key_black_24dp"
            app:key="practiceKey"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/key" />
        <SeekBarPreference
            android:max="3"
            app:defaultValue="@integer/max"
            app:dependency="practiceMode"
            app:icon="@drawable/ic_number_9_plus_black_24dp"
            app:key="practiceMax"
            app:min="1"
            app:showSeekBarValue="true"
            app:title="@string/max" />
        <Preference
            app:dependency="practiceMode"
            app:iconSpaceReserved="false"
            app:key="practiceStandard"
            app:summary="@string/standardMsg"
            app:title="@string/standard" />
    </PreferenceCategory>
</PreferenceScreen>