<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expressionBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/answerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <Button
            android:id="@+id/firstNumberButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/undefined"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toStartOf="@+id/operator1Button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/operator1Button"
            style="@android:style/Widget.Material.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/undefined"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toStartOf="@+id/secondNumberButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/firstNumberButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/secondNumberButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/undefined"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toStartOf="@+id/operator2Button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/operator1Button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/operator2Button"
            style="@android:style/Widget.Material.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/undefined"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toStartOf="@id/lastNumberButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/secondNumberButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/lastNumberButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/undefined"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/operator2Button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@id/selectBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expressionBox"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectBox"
        app:layout_constraintTop_toBottomOf="@id/answerTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/numberBox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/operatorBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5">
            <Button
                android:id="@+id/numberButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0"
                app:layout_constraintEnd_toStartOf="@+id/numberButton2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:id="@+id/numberButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0"
                app:layout_constraintEnd_toStartOf="@+id/numberButton3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/numberButton1"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/numberButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0"
                app:layout_constraintEnd_toStartOf="@+id/numberButton4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/numberButton2"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:id="@+id/numberButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/numberButton3"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/operatorBox"
            app:layout_constraintTop_toBottomOf="@id/numberBox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/subButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/subButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/mulButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/addButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/mulButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mul"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/divButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/subButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/divButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/mulButton"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>